Revert back to previous H1, H2, etc spacing.  Fix home page so that Recent Blog Posts not merged into footer logos.

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -88,14 +88,14 @@ h1, h2, h3, h4, h5, h6 {
   text-rendering: optimizeLegibility;
 }
 h1 {
-  font-size: 2.5rem;
+  font-size: 1rem;
 }
 h2 {
-  margin-top: 2.5rem;
+  margin-top: 1rem;
   font-size: 1.5rem;
 }
 h3 {
-  margin-top: 2.5rem;
+  margin-top: 1.5rem;
   font-size: 1.25rem;
 }
 h4, h5, h6 {
